- [BREAKING] Updated the branding to meet the WCAG 2.1 AA guidelines - [BREAKING] Changed the behaviour of the `.u-wrapper` class - [BREAKING] Changed the behaviour of the header - [BREAKING] Replaced the function of the `$switch-disabled` variable (The previous one is moved to `$switch-disabled-label`) - [BREAKING] Updated the syntax of the avatar component - [BREAKING] Updated the syntax of icon and social buttons - [BREAKING] Updated the syntax of lists with icons - [BREAKING] Updated the syntax of the table component - [BREAKING] Updated the syntax of the tag components with buttons in it - [BREAKING] Updated the syntax of the toggle component - [BREAKING] Updated the syntax of the alerts - [BREAKING] Updated the syntax of the button list component - [BREAKING] Updated the syntax of the datepicker component - [BREAKING] Updated the syntax of the pagination component - [BREAKING] Updated the syntax of the upload component - [BREAKING] Updated the syntax of the header component - [BREAKING] Updated the syntax of the tag list component - [BREAKING] Added some letterspacing to the label component - [BREAKING] Updated the syntax for all icons: `<span>` instead of the incorrect `<i>` - [BREAKING] Removed the `$font-size-ti` and `$font-size-xs` variables - [BREAKING] Removed the `$font-size-ti` and `$font-size-xs` variables - [BREAKING] Removed the ability to make the header fixed - [BREAKING] Removed the negative success, warning and danger buttons - Added a new type of button that can only be used in the header - Added the `$header-btn-bg` and `$header-btn-color` variables - Added the `$legend-color` and `$legend-size` variables - Added the `$switch-disabled-border` and `$switch-disabled-bg` variables - Added the `$switch-disabled-label` variable - Added the `$upload-disabled-color`, `$upload-disabled-bg` and `$upload-disabled-border` variables - Added miscellaneous button variables - Added ARIA-labels to empty buttons and anchors - changed the behaviour of the a ele

--- a/src/styles/quarks/_quarks.variables.scss
+++ b/src/styles/quarks/_quarks.variables.scss
@@ -4,15 +4,15 @@
  */
 
 
-// $font-family-base: 'Source Sans Pro' sans-serif;
-// $font-family-headings: 'Source Sans Pro' sans-serif;
-// $font-family-monospace: 'Source Code Pro', Menlo, Monaco, Consolas, 'Courier New', monospace;
 $font-family-base: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-family-headings: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-family-monospace: Menlo, Monaco, Consolas, 'Courier New', monospace;
-$brand-primary: #347ea6;
-$brand-secondary: #5fb1d6;
+$brand-primary: #105a82;
+$brand-secondary: #25779c;
+$header-bg: $brand-primary;
 $normal: 700;
-$header-bg: darken($brand-primary, 8%);
+$cite-color: rgb(111, 111, 111);
 $header-border: rgba($black, 0);
 $header-height: calc(3rem + 1px);
+$header-btn-bg: $header-bg;
+$header-btn-color: #fff;
